# assigment_3

./: .env.example  .gitignore  Makefile  README.md  langgraph.json  main.py  pyproject.toml  requirements.txt  run.bat  streamlit_app.py
scripts/: download_data.py
src/: config.py
src/agent/: __init__.py  checkpointer.py  cli.py  graph.py  profile.py  prompts.py  recommender.py  router.py  state.py
src/mcp_server/: __init__.py  client_example.py  server.py
src/tools/: __init__.py  dataset_tools.py  schemas.py
tests/: test_checkpointer.py  test_mcp_server.py  test_profile.py  test_recommender.py  test_router.py  test_tools.py
